--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "express-rate-limit": "^7.5.0",
     "express-validator": "^7.2.1",
     "morgan": "^1.10.0",
+    "sequelize": "^6.37.7",
+    "sqlite3": "^5.1.7",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1"
   },
