--- a/package.json
+++ b/package.json
@@ -20,10 +20,13 @@
   "homepage": "https://github.com/ddrandy/CodeUpNTBanckend#readme",
   "description": "",
   "dependencies": {
+    "bcryptjs": "^3.0.2",
+    "dotenv": "^16.5.0",
     "ejs": "^3.1.10",
     "express": "^5.1.0",
     "express-rate-limit": "^7.5.0",
     "express-validator": "^7.2.1",
+    "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
     "sequelize": "^6.37.7",
     "sqlite3": "^5.1.7",
